--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "https://ebook.yjc.ac.kr",
+  "proxy": "https://lib.yju.ac.kr",
   "eslintConfig": {
     "extends": [
       "react-app",
